# teimeida

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: check-container.yml  release-push-container.yml
assets/: index.html  new.html  style.css  upload_done.tpl.html
config/: users.conf
src/: cleanup.rs  fileauth.rs  main.rs  overview.rs  retrieve.rs  share.rs
src/share/: data.rs
templates/: new.html  overview.tpl.html  upload_done.tpl.html
