[package]
name = "teimeida"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "http2", "multipart", "tracing"] }
log = { version = "0.4", features = ["serde", "std"] }
nanoid = "0.4"
serde = { version = "1", features = ["derive"] }
simple_logger = "4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
xattr = "1"
